--- a/GPMTests/github/response_repos_owner_repo_projects_columns_column_id_cards.json
+++ b/GPMTests/github/response_repos_owner_repo_projects_columns_column_id_cards.json
@@ -5,5 +5,13 @@
     "note": "Delete Project column",
     "created_at": "2016-09-05T14:21:06Z",
     "updated_at": "2016-09-05T14:20:22Z"
-  }
+  },
+  {
+    "column_url": "https://api.github.com/repos/mtgto/GPM/projects/columns/80135",
+    "id": 134958,
+    "note": null,
+    "created_at": "2016-09-18T03:04:23Z",
+    "updated_at": "2016-09-18T03:04:23Z",
+    "content_url": "https://api.github.com/repos/mtgto/GPM/issues/4"
+ },
 ]
